# XALPlayer

./: .gitignore
Client/: CMakeLists.txt
Client/include/: Client.hpp  ConfigServerWindow.hpp  Global.hpp  MovieState.hpp  PopupMessageManager.hpp  SetupState.hpp  State.hpp  StateMachine.hpp
Client/src/: Client.cpp  ConfigServerWindow.cpp  MovieState.cpp  PopupMessageManager.cpp  SetupState.cpp  StateMachine.cpp  main.cpp
Server/: CMakeLists.txt
Server/include/: Global.hpp  Server.hpp
Server/src/: Server.cpp  main.cpp
